# chess-pgn-recorder

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN_DOC.md  LICENSE  README.md  chess_game.py  chess_pgn.py  chess_pgn_recorder.py  pgn_exporter.py  pyproject.toml  requirements.txt  test_chess_pgn.py
.github/workflows/: ci.yml  publish.yml
docs/: DEVELOPMENT.md  PYPI_CHECKLIST.md  PYPI_SETUP.md  README.md  RELEASE.md  USAGE.md
examples/: sample_game.pgn
src/: __init__.py  chess_game.py  chess_pgn.py  move_validator.py  pgn_exporter.py
tests/: __init__.py  test_chess_pgn.py
