[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chess-pgn-recorder"
version = "1.0.0"
description = "Interactive chess game recorder that converts moves in algebraic notation to PGN files with legal move validation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Lalatendu Mohanty"},
]
keywords = ["chess", "pgn", "algebraic-notation", "chess-game", "chess-recorder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]

dependencies = [
    "chess>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
chess-pgn = "chess_pgn:main"

[project.urls]
Repository = "https://github.com/lmohanty/chess-pgn-recorder"
Documentation = "https://github.com/lmohanty/chess-pgn-recorder/blob/main/README.md"
Issues = "https://github.com/lmohanty/chess-pgn-recorder/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:test_chess_pgn.py}"
test-cov = "pytest --cov=. --cov-report=term-missing {args:test_chess_pgn.py}"
test-verbose = "pytest -v {args:test_chess_pgn.py}"

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["."]
omit = [
    "test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

