[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chess-pgn-recorder"
version = "0.1.1a1"
description = "Record chess games in algebraic notation and export PGN files compatible with Chess.com, Lichess, and all major analysis tools"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Lalatendu Mohanty", email = "itslalatendu@gmail.com"},
]
keywords = ["chess", "pgn", "algebraic-notation", "chess-game", "chess-recorder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]

dependencies = [
    "chess>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]

[project.scripts]
chessrec = "src.chess_pgn:main"

[project.urls]
Repository = "https://github.com/lmohanty/chess-pgn-recorder"
Documentation = "https://github.com/lmohanty/chess-pgn-recorder/blob/main/README.md"
Issues = "https://github.com/lmohanty/chess-pgn-recorder/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests/}"
test-cov = "pytest --cov=src --cov-report=term-missing {args:tests/}"
test-verbose = "pytest -v {args:tests/}"
lint = "flake8 src/ tests/"
typecheck = "mypy src/"
format = "black src/ tests/"
format-check = "black --check --diff src/ tests/"
check-all = [
    "lint",
    "typecheck",
    "test-cov",
]
build-check = [
    "hatch build",
    "twine check dist/*",
]
publish-test = "hatch publish -r test"
publish-prod = "hatch publish"

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  __pycache__
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
files = ["src"]

[tool.flake8]
max-line-length = 127
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".hatch",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
]

